--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Space Invaders</title>
 	<link rel="stylesheet" href="">
-	<script src="game.js">
+	
+</head>
+<body>
+	<div id="background">
+		<div id="player"></div>
+		<div id="missiles"></div>
+		<div id="enemies"></div>
+	</div>
+	<script>
 		var player = {
 			left: 575,
 			top: 700
@@ -13,7 +21,7 @@
 
 		var = missiles = [];
 
-		var aliens = [
+		var enemies = [
 			{ left: 200, top: 100 },
 			{ left: 300, top: 100 },
 			{ left: 400, top: 100 },
@@ -53,8 +61,8 @@
 		}
 
 		function drawPlayer() {
-			document.getElementById('Player').style.left = player.left + 'px';
-			document.getElementById('Player').style.top = player.top + 'px';
+			document.getElementById('player').style.left = player.left + 'px';
+			document.getElementById('player').style.top = player.top + 'px';
 			}
 		function drawMissiles() {
 			document.getElementById('missiles').innerHTML = ""
@@ -70,19 +78,41 @@
 		}
 
 		function drawEnemies() {
-			document.getElementById('aliens').innerHTML = ""
-			for(var i = 0; i < aliens.length; i++){
-				document.getElementById('aliens').innerHTML += `<div class='aliens' style='left:${aliens[i].left}px; top:${aliens[i].top}px'></div>`;
+            document.getElementById('enemies').innerHTML = ""
+            for(var i = 0 ; i < enemies.length ; i++ ) {
+                document.getElementById('enemies').innerHTML += `<div class='alien' style='left:${enemies[i].left}px; top:${enemies[i].top}px'></div>`;
             }
-			}
-		}
+        }
+
+        function moveEnemies() {
+        	for(var i = 0; i < enemies.length; i++) {
+        		enemies[i].top = enemies[i].top + 1;
+        	}
+        }
+
+        function collisionDetection() {
+        	for (var enemy = 0; enemy < enemies.length; enemy++) {
+        		for (var missile = 0; missile < missiles.length; missile++) {
+        			if (
+        				missiles[missile].left >= enemies[enemy].left && missiles[missile].left <= (enemies[enemy].left + 50) && missiles[missile].top <= (enemies[enemy].top + 50) && missiles[missile].top >= enemies[enemy].top
+        				) {
+        				enemies.splice(enemy, 1);
+        				missiles.splice(missile, 1);
+        			}
+        		}
+        	}
+        }
+
+        function gameLoop() {
+        	setTimeout(gameLoop, 1000)
+        	moveMissiles();
+        	drawMissiles();
+        	moveEnemies();
+        	drawEnemies();
+        	collisionDetection();
+        }
+
+        gameLoop();
 	</script>
-</head>
-<body>
-	<div id="background">
-		<div id="player"></div>
-		<div id="missiles"></div>
-		<div id="aliens"></div>
-	</div>
 </body>
 </html>
